--- a/users-prod.yml
+++ b/users-prod.yml
@@ -1,7 +1,7 @@
 build:
   version: "1.0"
 
-accounts:
+users:
   message: "Hey, welcome to maroX users prod configurations"
   contactDetails:
     name: "Marwan Elsays - Product Owner"
