--- a/users-qa.yml
+++ b/users-qa.yml
@@ -1,7 +1,7 @@
 build:
   version: "2.0"
 
-accounts:
+users:
   message: "Welcome to maroX users qa configuration file"
   contactDetails:
     name: "Marwan Elsays - QA Lead"
