--- a/users.yml
+++ b/users.yml
@@ -1,7 +1,7 @@
 build:
   version: "3.0"
 
-accounts:
+users:
   message: "Welcome to maroX users configuration file "
   contactDetails:
     name: "Marwan Elsays - Developer"
