--- a/posts-prod.yml
+++ b/posts-prod.yml
@@ -4,7 +4,7 @@ build:
 posts:
   message: "Hey, welcome to maroX posts prod configurations"
   contactDetails:
-    name: "Maro Elsays - Product Owner"
+    name: "Ali Mones - Product Owner"
     email: "maroelsays2013@gmail.com"
   onCallSupport:
     - (453) 392-4829
