--- a/comments-prod.yml
+++ b/comments-prod.yml
@@ -1,7 +1,7 @@
 build:
   version: "1.0"
 
-posts:
+comments:
   message: "Hey, welcome to maroX comments prod configurations"
   contactDetails:
     name: "Ali Mones - Product Owner"
