--- a/users-prod.yml
+++ b/users-prod.yml
@@ -2,9 +2,9 @@ build:
   version: "1.0.2"
 
 users:
-  message: "Hello, welcome to maroX users prod configurations"
+  message: "Halo, welcome to maroX users prod configurations"
   contactDetails:
-    name: "Marwan Elsays - Product Owner"
+    name: "Maro Elsays - Product Owner"
     email: "maroelsays2013@gmail.com"
   onCallSupport:
     - (453) 392-4829
